--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,7 +1,6 @@
 ---
 ---
 @import "minima";
-@import "_footer";
 
 // Base styles
 body {
@@ -304,4 +303,209 @@ body {
 
 .page-content {
     padding: 3px 0 0 0;
+}
+
+// ------------------------------------------------------------------------------------------- //
+// Footer visibility
+
+
+@media (max-width: 768px) {
+    .site-footer h-card mobile-footer
+    {
+        display: none;
+    }
+    .mobile-footer { display: block; }
+}
+
+// List styles for footer
+.horizontal-list, .social-media-list {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+}
+
+.social-media-list {
+    justify-content: center;
+    gap: 27px;
+    margin: 20px 0;
+
+    li {
+        margin: 0;
+        padding: 0;
+    }
+}
+
+// Desktop footer styles
+@media (min-width: 601px) {
+
+    .mobile-footer {
+        display: none;
+    }
+    .social-media-list {
+        a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0;
+            margin: 0;
+        }
+
+        .svg-icon {
+            width: 50px;
+            height: 50px;
+            transition: filter 0.3s ease, transform 0.3s ease;
+
+            &:hover {
+                transform: scale(1.2);
+            }
+        }
+
+        &:hover {
+            .svg-icon {
+                filter: blur(2px);
+
+                &:hover {
+                    filter: none;
+                }
+            }
+        }
+    }
+
+    .site-footer {
+        border-top: 1px solid #e8e8e8;
+        padding: 10px 0;
+        clear: both;
+
+        .footer-heading {
+            font-size: 18px;
+            margin-bottom: 5px;
+            margin-left: -1px;
+        }
+
+        .contact-list,
+        .social-media-list {
+            list-style: none;
+            margin-left: 0;
+            padding: 0;
+        }
+
+        .footer-col-wrapper {
+            font-size: 15px;
+            color: #828282;
+            margin-left: -15px;
+        }
+
+        .footer-col {
+            float: left;
+            margin-bottom: 5px;
+            padding-left: 15px;
+            margin-right: 173px;
+        }
+
+        .footer-col-2 {
+            padding: 0;
+        }
+    }
+
+    .social-media-list.horizontal-list {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 0;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+
+        li {
+            margin: 0;
+            padding: 0;
+            line-height: 1;
+
+            & + li {
+                padding-top: 0;
+            }
+        }
+
+        a {
+            display: flex;
+            align-items: center;
+            padding: 0;
+            margin: 0;
+        }
+
+        .svg-icon {
+            width: 50px;
+            height: 50px;
+            padding: 15px;
+            margin: 0;
+            transition: filter 0.3s ease, transform 0.3s ease;
+        }
+    }
+}
+
+// Mobile footer styles
+@media (max-width: 600px) {
+    .site-footer {
+        margin-top: auto;
+        position: relative;
+        bottom: 50px;
+        background: inherit;
+        background-attachment: fixed;
+    }
+
+    .site-footer.h-card {
+        padding: 0;
+    }
+
+    .site-footer {
+        height: 60px;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        overflow: hidden;
+        z-index: 100;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .footer-content {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+        }
+
+        .footer-col-wrapper {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0;
+            padding: 0;
+            flex-direction: column;
+        }
+
+        .footer-col {
+            width: 100%;
+            justify-content: center;
+            margin: 0;
+            padding: 0 15px;
+        }
+
+        .social-media-list,
+        .horizontal-list {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            li {
+                display: flex;
+                align-items: center;
+            }
+        }
+    }
 }
