--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Begin Jekyll SEO tag v2.8.0 -->
+<meta name="mobile-web-app-capable" content="yes">
   <title>Home | My Static Website</title>
   <meta name="generator" content="Jekyll v3.10.0" />
   <meta property="og:title" content="Home" />
