--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1263,3 +1263,12 @@ body {
 
 }
 }
+
+@media (max-width: 1023px) and (orientation: landscape) {
+    .site-footer {
+        background: white !important;
+        opacity: 100 !important;
+        backdrop-filter: none !important;
+        -webkit-backdrop-filter: none !important;
+    }
+}
