--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1270,5 +1270,6 @@ body {
         opacity: 100 !important;
         backdrop-filter: none !important;
         -webkit-backdrop-filter: none !important;
+        height: 35px !important;
     }
 }
